--- a/src/styles.css
+++ b/src/styles.css
@@ -22,32 +22,26 @@
   stroke: "black"
 }
 
-.slider {
-  -webkit-appearance: none;
-  width: 500px;
-  height: 15px;
-  border-radius: 5px;
-  background: #d3d3d3;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-}
+.slider {width: 500px;height: 15px;-webkit-transition: .2s;transition: opacity .2s;opacity: 0.7;border-radius: 5px;outline: none;background: #d3d3d3;
 
-.slider::-webkit-slider-thumb {
   -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: hsl(73, 98%, 37%);
-  cursor: pointer;
-}
+  }
+
+.slider::-webkit-slider-thumb {width: 25px;height: 25px;cursor: pointer;border-radius: 50%;background: hsl(73, 98%, 37%);
+
+  -webkit-appearance: none;appearance: none;
+  }
 
 .slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: hsl(73, 98%, 37%);
-  cursor: pointer;
+  width: 25px;height: 25px;cursor: pointer;border-radius: 50%;background: hsl(73, 98%, 37%);
+  }
+
+body{
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 10pt
+}
+
+hr {
+  border: 1px solid;
+  margin-left: 1cm;
 }
